added block my training projects

--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
                         <div class="name__skill base">JSON</div>
                         <div class="name__skill base">TypeScript</div>
                         <div class="name__skill base">OOP</div>
+                        <div class="name__skill base">BEM</div>
                         <div class="name__skill base">Git (Version Control)</div>
                         <div class="name__skill normal">Browser Developer tools</div>
                         <div class="name__skill normal">vsCode</div>
@@ -182,9 +183,67 @@
 
                 </div>
             </section> -->
+            <section class="projects" id="projects">
+                <div class="left_colomn">
+                    <h2 class="title_section">Учебные проекты:</h2>
+                </div>
+                <div class="right_colomn projects">
+                    <div class="list_projects">
+                        <a class="link_project" href="https://gfredex.github.io/ls-API/" target="_blank">
+                            <div class="item_project">
+                                <img class="img_project" src="./src/appWeather.jpg" alt="app The Weather">
+                                <p class="title_project">app The Weather</p>
+                            </div>
+                        </a>
+                        <a class="link_project" href="https://gfredex.github.io/plants/" target="_blank">
+                            <div class="item_project">
+                                <img class="img_project" src="./src/plants.jpg" alt="Plants">
+                                <p class="title_project">Plants</p>
+                            </div>
+                        </a>
+                        <a class="link_project" href="https://gfredex.github.io/library/" target="_blank">
+                            <div class="item_project">
+                                <img class="img_project" src="./src/library.jpg" alt="Library">
+                                <p class="title_project">Library </p>
+                            </div>
+                        </a>
+                        <a class="link_project" href="https://gfredex.github.io/shelter/" target="_blank">
+                            <div class="item_project">
+                                <img class="img_project" src="./src/shelter.jpg" alt="Shelter">
+                                <p class="title_project">Shelter</p>
+                            </div>
+                        </a>
+                        <a class="link_project" href="https://gfredex.github.io/cssBayan/cssBayan/" target="_blank">
+                            <div class="item_project">
+                                <img class="img_project" src="./src/cssBayan.jpg" alt="cssBayan">
+                                <p class="title_project">cssBayan</p>
+                            </div>
+                        </a>
+                        <a class="link_project" href="https://gfredex.github.io/coffee-house/" target="_blank">
+                            <div class="item_project">
+                                <img class="img_project" src="./src/coffee-house.jpg" alt="Coffee-house">
+                                <p class="title_project">Coffee-house</p>
+                            </div>
+                        </a>
+                        <a class="link_project" href="https://gfredex.github.io/LS11-Moder_Furniture/#" target="_blank">
+                            <div class="item_project">
+                                <img class="img_project" src="./src/DudeShape.jpg" alt="DudeShape">
+                                <p class="title_project">DudeShape</p>
+                            </div>
+                        </a>
+                        <a class="link_project" href="https://gfredex.github.io/Practice/#" target="_blank">
+                            <div class="item_project">
+                                <img class="img_project" src="./src/layoutPractice.png" alt="layoutPractice">
+                                <p class="title_project">layoutPractice</p>
+                            </div>
+                        </a>
+
+                    </div>
+                </div>
+            </section>
             <section class="languages" id="languages">
                 <div class="left_colomn">
-                    <h2 class="title_section">Languages:</h2>
+                    <h2 class="title_section">Языки:</h2>
                 </div>
                 <div class="right_colomn">
                     <ul>
