--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <li class="item-menu"><a href="#education">Образование</a></li>
                         <li class="item-menu"><a href="#experience">Опыт</a></li>
                         <li class="item-menu"><a href="#skills">Навыки</a></li>
-                        <li class="item-menu"><a href="#example_code">Example code</a></li>
+                        <li class="item-menu"><a href="#projects">Учебные проекты</a></li>
                         <li class="item-menu"><a href="#languages">Языки</a></li>
                     </ul>
                 </div>
