--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     <div class="wrapper">
         <header class="header">
-            <div class="left_colomn"></div>
-            <div class="right_colomn"></div>
+            <div class="left_colomn_head"></div>
+            <div class="right_colomn_head"></div>
             <div class="wrap__header">
                 <div class="photo"><img src="myAvatar01.jpg" alt="My photo"></div>
                 <div class="text__header">
