--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My CV</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="style_media.css">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style_media.css">
 </head>
 
 <body>
@@ -15,9 +15,9 @@
             <div class="left_colomn_head"></div>
             <div class="right_colomn_head"></div>
             <div class="wrap__header">
-                <div class="photo"><img src="myAvatar01.jpg" alt="My photo"></div>
+                <div class="photo"><img src="./myAvatar02.jpg" alt="My photo"></div>
                 <div class="text__header">
-                    <h1 class="title">Zemnitsky Dmitry</h1>
+                    <h1 class="title">Дима Земницкий</h1>
                     <p>frontend developer</p>
                 </div>
             </div>
@@ -148,6 +148,7 @@
                         <div class="name__skill base">Redux</div>
                         <div class="name__skill base">API</div>
                         <div class="name__skill base">JSON</div>
+                        <div class="name__skill base">SPA</div>
                         <div class="name__skill base">TypeScript</div>
                         <div class="name__skill base">OOP</div>
                         <div class="name__skill base">BEM</div>
